--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -105,3 +105,6 @@ Mdtyp=Mandate Type
 Create=Create
 Status=Status
 Reqid=Request Number
+
+PositionText=Position
+OragnizationalUnitText=Oragnizational Unit
