--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -108,3 +108,8 @@ Reqid=Request Number
 
 PositionText=Position
 OragnizationalUnitText=Oragnizational Unit
+
+Createdat=Create Date
+Createdby=Created By
+Changedat=Change Date
+Changedby=Changed By
