--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -108,3 +108,8 @@ Reqid=رقم الطلب
 
 PositionText=المنصب
 OragnizationalUnitText=الإدارة
+
+Createdat=تاريخ الإنشاء
+Createdby=تم الإنشاء بواسطة
+Changedat=تاريخ التغيير
+Changedby=تم التغيير بواسطة
