Remove old libraries

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -113,3 +113,7 @@ Createdat=Create Date
 Createdby=Created By
 Changedat=Change Date
 Changedby=Changed By
+
+flpTitle=Mandate Requests
+
+flpSubtitle=Manage requests
