Update submit function

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -117,3 +117,7 @@ Changedby=Changed By
 flpTitle=Mandate Requests
 
 flpSubtitle=Manage requests
+submit_suc=Request submitted successfully
+ApprovalProcess=Approval Process
+QararInfo=Qarar Info
+Travp=Travel Paid By
