--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -113,3 +113,11 @@ Createdat=تاريخ الإنشاء
 Createdby=تم الإنشاء بواسطة
 Changedat=تاريخ التغيير
 Changedby=تم التغيير بواسطة
+
+flpTitle=طلبات الانتداب
+
+flpSubtitle=إدارة الطلبات
+submit_suc=تم إرسال الطلب بنجاح
+ApprovalProcess=عملية الموافقة
+QararInfo=بيانات القرار
+Travp=دفع الرحلة بواسطة
