--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -117,6 +117,7 @@ Changedby=Changed By
 flpTitle=Mandate Requests
 
 flpSubtitle=Manage requests
+Submit=Submit
 submit_suc=Request submitted successfully
 ApprovalProcess=Approval Process
 QararInfo=Qarar Info
