--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -1,18 +1,18 @@
 # This is the resource bundle for Mandate
 
 #XTIT: Application name
-appTitle=التكليف
+appTitle=الإنتداب
 
 #YDES: Application description
-appDescription=تطبيق التكليف
+appDescription=تطبيق الإنتداب
 
 #~~~ Master View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Master view title with placeholder for the number of items
-masterTitleCount=طلب تكليف ({0})
+masterTitleCount=طلب إنتداب ({0})
 
 #XTOL: Tooltip for the search field
-masterSearchTooltip=أدخل رقم طلب التكليف
+masterSearchTooltip=أدخل رقم طلب الإنتداب
 
 #XBLI: text for a list with no data
 masterListNoDataText=لا يوجد طلبات متاحة
@@ -45,7 +45,7 @@ detailLineItemTableHeading=الموظفون
 detailLineItemTableHeadingCount=الموظفون ({0})
 
 #XTIT: Save as tile app title
-shareSaveTileAppTitle=تكليف - {0}
+shareSaveTileAppTitle=إنتداب - {0}
 
 #XTIT: Send E-Mail subject
 shareSendEmailObjectSubject=<Email subject including object identifier PLEASE REPLACE ACCORDING TO YOUR USE CASE> {0}
@@ -74,7 +74,7 @@ notFoundText=هذا المصدر غير موجود
 #~~~ Not Available View ~~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Master view title
-notAvailableViewTitle=تكليف
+notAvailableViewTitle=إنتداب
 
 #~~~ Error Handling ~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -95,13 +95,13 @@ Confirm=تأكيد
 confirmLeaveMsg=مغادرة صفحة الإنشاء؟ سيتم فقدان البيانات.
 DraftSaved=تم حفظه كمسوده
 Employees=الموظفون
-Mandate=تكليف
-detailTitle=تكليف
-MandateData=بيانات التكليف
+Mandate=إنتداب
+detailTitle=إنتداب
+MandateData=بيانات الإنتداب
 createLineItemTableNoDataText=لا يوجد بيانات
 Pernr=موظف
 PersonFullName=الاسم الكامل
-Mdtyp=نوع التكليف
+Mdtyp=نوع الإنتداب
 Create=إنشاء
 Status=الحالة
 Reqid=رقم الطلب
@@ -114,7 +114,7 @@ Createdby=تم الإنشاء بواسطة
 Changedat=تاريخ التغيير
 Changedby=تم التغيير بواسطة
 
-flpTitle=طلبات التكليف
+flpTitle=طلبات الإنتداب
 
 flpSubtitle=إدارة الطلبات
 submit_suc=تم إرسال الطلب بنجاح
@@ -122,3 +122,6 @@ Submit=إرسال
 ApprovalProcess=عملية الموافقة
 QararInfo=بيانات القرار
 Travp=دفع الرحلة بواسطة
+Submit=ارسال
+ApprovalProcess=مسار الاعتماد
+QararInfo=تفاصيل القرار
