Make Mission Status on Employee level

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -122,3 +122,4 @@ submit_suc=Request submitted successfully
 ApprovalProcess=Approval Process
 QararInfo=Qarar Info
 Travp=Travel Paid By
+Mists=Mission Status
