--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -122,6 +122,4 @@ Submit=إرسال
 ApprovalProcess=عملية الموافقة
 QararInfo=بيانات القرار
 Travp=دفع الرحلة بواسطة
-Submit=ارسال
-ApprovalProcess=مسار الاعتماد
-QararInfo=تفاصيل القرار
+Mists=حالة المهمة
