Adding Marsn and some translations

--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -123,3 +123,5 @@ ApprovalProcess=عملية الموافقة
 QararInfo=بيانات القرار
 Travp=دفع الرحلة بواسطة
 Mists=حالة المهمة
+New=جديد
+Submitted=تم إرسالة
