Handle dry run comments

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -101,7 +101,7 @@ MandateData=Mandate Data
 createLineItemTableNoDataText=No data
 Pernr=Employee
 PersonFullName=Full Name
-Mdtyp=Mandate Type
+Mdtyp=Transportation
 Create=Create
 Status=Status
 Reqid=Request Number
@@ -120,8 +120,14 @@ flpSubtitle=Manage requests
 Submit=Submit
 submit_suc=Request submitted successfully
 ApprovalProcess=Approval Process
+Qarar=Qarar
 QararInfo=Qarar Info
 Travp=Travel Paid By
 Mists=Mission Status
 New=New
 Submitted=Submitted
+Pending=Pending
+Approved=Approved
+Print=Print
+QararPrint=Qarar Print
+Close=Close
