--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -101,7 +101,7 @@ MandateData=بيانات الإنتداب
 createLineItemTableNoDataText=لا يوجد بيانات
 Pernr=موظف
 PersonFullName=الاسم الكامل
-Mdtyp=نوع الإنتداب
+Mdtyp=وسيلة النقل
 Create=إنشاء
 Status=الحالة
 Reqid=رقم الطلب
@@ -120,8 +120,14 @@ flpSubtitle=إدارة الطلبات
 submit_suc=تم إرسال الطلب بنجاح
 Submit=إرسال
 ApprovalProcess=عملية الموافقة
+Qarar=القرار
 QararInfo=بيانات القرار
 Travp=دفع الرحلة بواسطة
 Mists=حالة المهمة
 New=جديد
 Submitted=تم إرسالة
+Pending=معلق
+Approved=تمت الموافقة
+Print=طباعة
+QararPrint=طباعة القرار
+Close=إغلاق
