handle dry run comments - continued

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -88,10 +88,15 @@ saveSuccessMessage=Request saved Successfully
 saveErrorMessage=Request is not saved, an error occured
 editSuccessMessage=Request edited Successfully
 editErrorMessage=Request is not edited, an error occured
+Yes=Yes
+No=No
+submit_conf=Are you sure to submit request?
+Ok=Ok
 Cancel=Cancel
 Save=Save
 Edit=Edit
 Confirm=Confirm
+confirmLeaveDetailMsg=Do you want to cancel? data will be losted.
 confirmLeaveMsg=Leave creation page? data will be losted.
 DraftSaved=Draft saved.
 Employees=Employees
@@ -128,6 +133,9 @@ New=New
 Submitted=Submitted
 Pending=Pending
 Approved=Approved
+Rejected=Rejected
 Print=Print
 QararPrint=Qarar Print
 Close=Close
+Requests=Requests
+MandateDetails=Mandate Details
