--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -88,10 +88,15 @@ saveSuccessMessage=تم حفظ الطلب بنجاح
 saveErrorMessage=لم يتم حفظ الطلب، حدث خطأ ما.
 editSuccessMessage=تم تعديل الطلب بنجاح
 editErrorMessage=لم يتم تعديل الطلب، حدث خطأ ما
+Yes=نعم
+No=لا
+submit_conf=هل أنت متأكد من إرسال الطلب؟
+Ok=حسناً
 Cancel=إلغاء
 Save=حفظ
 Edit=تعديل
 Confirm=تأكيد
+confirmLeaveDetailMsg=هل تريد الإلغاء؟ سيتم فقدان البيانات
 confirmLeaveMsg=مغادرة صفحة الإنشاء؟ سيتم فقدان البيانات.
 DraftSaved=تم حفظه كمسوده
 Employees=الموظفون
@@ -125,9 +130,12 @@ QararInfo=بيانات القرار
 Travp=دفع الرحلة بواسطة
 Mists=حالة المهمة
 New=جديد
-Submitted=تم إرسالة
+Submitted=تم إرساله
 Pending=معلق
 Approved=تمت الموافقة
+Rejected=تم رفضه
 Print=طباعة
 QararPrint=طباعة القرار
 Close=إغلاق
+Requests=الطلبات
+MandateDetails=تفاصيل المهمة
