Update printing method - save request before printing if have pending changes

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -97,6 +97,7 @@ Save=Save
 Edit=Edit
 Confirm=Confirm
 confirmLeaveDetailMsg=Do you want to cancel? data will be losted.
+confirmSaveMsg=Some data is not saved; do you want to save and continue?
 confirmLeaveMsg=Leave creation page? data will be losted.
 DraftSaved=Draft saved.
 Employees=Employees
