--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -97,6 +97,7 @@ Save=حفظ
 Edit=تعديل
 Confirm=تأكيد
 confirmLeaveDetailMsg=هل تريد الإلغاء؟ سيتم فقدان البيانات
+confirmSaveMsg=بعض البيانات لم يتم حفظها، هل تريد الحفظ والمتابعة؟
 confirmLeaveMsg=مغادرة صفحة الإنشاء؟ سيتم فقدان البيانات.
 DraftSaved=تم حفظه كمسوده
 Employees=الموظفون
