--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -140,3 +140,8 @@ QararPrint=Qarar Print
 Close=Close
 Requests=Requests
 MandateDetails=Mandate Details
+MandateDays=Mandate Days
+MissionDays=Mission Days
+TravelBefore=Travel Before
+TravelAfter=Travel After
+MissionData=Mission Data
