--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -139,4 +139,9 @@ Print=طباعة
 QararPrint=طباعة القرار
 Close=إغلاق
 Requests=الطلبات
-MandateDetails=تفاصيل المهمة
+MandateDetails=تفاصيل الإنتداب
+MandateDays=ايام الإنتداب
+MissionDays=ايام المهمة
+TravelBefore=ايام السفر قبل
+TravelAfter=ايام السفر بعد
+MissionData=بيانات المهمة
