Apply changes on calculation logic

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -145,3 +145,4 @@ MissionDays=Mission Days
 TravelBefore=Travel Before
 TravelAfter=Travel After
 MissionData=Mission Data
+MandateDatesUpdated=Mandate dates updated
