--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -145,3 +145,4 @@ MissionDays=ايام المهمة
 TravelBefore=ايام السفر قبل
 TravelAfter=ايام السفر بعد
 MissionData=بيانات المهمة
+MandateDatesUpdated=تم تعديل تواريخ الرحلة
