Update navigation button visibility - remove it from my inbox

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,7 +9,7 @@ appDescription=HCM Mandate custom application
 #~~~ Master View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Master view title with placeholder for the number of items
-masterTitleCount=Mandate ({0})
+masterTitleCount=Mandate
 
 #XTOL: Tooltip for the search field
 masterSearchTooltip=Enter mandate name or a part of it.
@@ -146,3 +146,4 @@ TravelBefore=Travel Before
 TravelAfter=Travel After
 MissionData=Mission Data
 MandateDatesUpdated=Mandate dates updated
+NEWREQUEST=NEW REQUEST
