--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -9,7 +9,7 @@ appDescription=تطبيق الإنتداب
 #~~~ Master View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Master view title with placeholder for the number of items
-masterTitleCount=طلب إنتداب ({0})
+masterTitleCount=طلب إنتداب
 
 #XTOL: Tooltip for the search field
 masterSearchTooltip=أدخل رقم طلب الإنتداب
@@ -146,3 +146,4 @@ TravelBefore=ايام السفر قبل
 TravelAfter=ايام السفر بعد
 MissionData=بيانات المهمة
 MandateDatesUpdated=تم تعديل تواريخ الرحلة
+NEWREQUEST=طلب جديد
