update saving method - if errors keep request editable

--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -147,3 +147,4 @@ TravelAfter=ايام السفر بعد
 MissionData=بيانات المهمة
 MandateDatesUpdated=تم تعديل تواريخ الرحلة
 NEWREQUEST=طلب جديد
+noChangesToSave=لا يوجد بيانات جديدة لحفظها، قم ببعض التغييرات أولاً
