--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -147,3 +147,4 @@ TravelAfter=Travel After
 MissionData=Mission Data
 MandateDatesUpdated=Mandate dates updated
 NEWREQUEST=NEW REQUEST
+noChangesToSave=No new data to save, Please do some changes first
