--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -148,3 +148,4 @@ MissionData=Mission Data
 MandateDatesUpdated=Mandate dates updated
 NEWREQUEST=NEW REQUEST
 noChangesToSave=No new data to save, Please do some changes first
+WithComments=with comments
