--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -148,3 +148,4 @@ MissionData=بيانات المهمة
 MandateDatesUpdated=تم تعديل تواريخ الرحلة
 NEWREQUEST=طلب جديد
 noChangesToSave=لا يوجد بيانات جديدة لحفظها، قم ببعض التغييرات أولاً
+WithComments=مع تعليقات
