--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -149,3 +149,5 @@ MandateDatesUpdated=Mandate dates updated
 NEWREQUEST=NEW REQUEST
 noChangesToSave=No new data to save, Please do some changes first
 WithComments=with comments
+CreateMandateRequest=Create mandate request
+MandateRequestDetails=Mandate Request details
