--- a/webapp/i18n/i18n_ar.properties
+++ b/webapp/i18n/i18n_ar.properties
@@ -149,3 +149,6 @@ MandateDatesUpdated=تم تعديل تواريخ الرحلة
 NEWREQUEST=طلب جديد
 noChangesToSave=لا يوجد بيانات جديدة لحفظها، قم ببعض التغييرات أولاً
 WithComments=مع تعليقات
+CreateMandateRequest=إنشاء طلب انتداب
+RequestNumber=رقم الطلب:
+MandateRequestDetails=تفاصيل طلب الإنتداب
